--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,14 @@ dependencies {
       //'com.fasterxml.jackson.core:jackson-core:2.7.4',
       //'com.fasterxml.jackson.core:jackson-databind:2.7.4',
       //'com.fasterxml.jackson.core:jackson-annotations:2.7.4',
-    //testImplementation 'junit:junit:4.12'  use spock!
+}
+
+testing {
+    suites {
+        test {
+            useSpock('2.2-M1-groovy-3.0')
+        }
+    }
 }
 
 project.ext.set('rtLibs', null)
