--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
       //'com.fasterxml.jackson.core:jackson-core:2.7.4',
       //'com.fasterxml.jackson.core:jackson-databind:2.7.4',
       //'com.fasterxml.jackson.core:jackson-annotations:2.7.4',
+    testImplementation 'org.hsqldb:hsqldb:2.6.1'
 }
 
 testing {
